Issue #2228317 by johnv: Fixed hook_user_role_insert is not called when Admin UI disabled.
Issue #2228457 by johnv: Do NOT enable all roles for Transitions, upon enabling Workflow UI module.
Issue #2228457 by johnv: Fixed some help texts.
Issue #2228457 by johnv: Fixed menu_build should not be called in admin_ui install, and is not needed since update_7001 exists.
Issue #2226781 by johnv: Removed Workfow Add form, in favour of Workflow Edit form.
Issue #2128423 by johnv: Fixed small theming thingy in workflow_cleanup.pages.inc.
Issue #2187321 by johnv: Added Workflow as an Exportable entity (not complete yet, but allows cloning).
Issue #2226451 by johnv: Fixed workflow widget when creating a node, and only 1 state allowed: should move node to first state.
Issue #2226781 by johnv: Changed Workflow Access page to use Entity UI.
Issue #2226781 by johnv: Changed Workflow Clean up page to use Entity UI.
Issue #2220065 by zihong0, johnv: Fixed workflow_access_node_access_records() is not called from node_save().
Issue #2220065 by johnv: Fixed better filters WorkflowTransition->execute().
Issue #2209359 by johnv: Fixed submitting workflow access settings, does not trigger access rebuild for workflow_field.
Issue #2209359 by johnv: Fixed better UX for workflow_access pages, and removing a hook for better performance.
Issue #2230833 by johnv: Fixed deleting/fetching ScheduledTransitions, when having multiple workflow_fields per node.
Issue #2226781 by johnv: Fixed parameters of workflow_admin_ui_edit_form_validate().
Issue #2230833 by johnv: Fixed showing ScheduledTransitions, when having multiple workflow_fields per node.
Issue #2226781 by johnv: Fixed screen flow of workflow_admin_ui_edit_form().
Issue #2209359 by johnv: Fixed workflow_access_node_access_records() in case of Access Rebuild of Workflow Fields.
Issue #2209359 by johnv: Fixed error message in workflow_access.
Issue #2019345 by johnv: Added parameter 'transition' to hook_workflow().